Se modifico el elemento

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,13 @@
-PRIMERA LINEA
+<html>
+
+<head></head>
+
+<body>
+ SEGUNDA PRACTICA
+
+ PRIMERA PAGINA
+
+ <a href="Index_1.html">Haz clic para ir a la pagina 2</a> 
+</body>
+
+</html>
